@@ -5,7 +5,7 @@ dnl Initialization and Versioning
 dnl ------------------------------------------------
 
 
-AC_INIT([libvorbis],[1.2.2],[vorbis-dev@xiph.org])
+AC_INIT([libvorbis],[1.2.3],[vorbis-dev@xiph.org])
 
 AC_CONFIG_SRCDIR([lib/mdct.c])
 
@@ -24,14 +24,17 @@ dnl - interfaces added -> increment AGE
 dnl - interfaces removed -> AGE = 0
 
 V_LIB_CURRENT=4
-V_LIB_REVISION=2
+V_LIB_REVISION=3
 V_LIB_AGE=4
+
 VF_LIB_CURRENT=6
-VF_LIB_REVISION=1
+VF_LIB_REVISION=2
 VF_LIB_AGE=3
+
 VE_LIB_CURRENT=2
-VE_LIB_REVISION=5
+VE_LIB_REVISION=6
 VE_LIB_AGE=0
+
 AC_SUBST(V_LIB_CURRENT)
 AC_SUBST(V_LIB_REVISION)
 AC_SUBST(V_LIB_AGE)
