@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Vorbis</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Vorbis framework 1.2.2, Copyright © 1994-2009 Xiph.Org Foundation</string>
+	<string>Vorbis framework 1.2.3, Copyright © 1994-2009 Xiph.Org Foundation</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
@@ -17,13 +17,13 @@
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.2</string>
+	<string>1.2.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.2</string>
+	<string>1.2.3</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Vorbis framework 1.2.2, Copyright © 1994-2009 Xiph.Org Foundation</string>
+	<string>Vorbis framework 1.2.3, Copyright © 1994-2009 Xiph.Org Foundation</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 </dict>
